 * bin/import now has --scripted option which gives machine readable info
    on what has been imported and if it completed ok.
 * Fixed bug that meant that to_string could contain non utf8 data if 
    dirty data was used to create the DOM using XML::DOM

2006-12-02 cjg
 * Shortened "fieldname UNSPECIFIED" to "UNSPECIFED".

2006-12-02 cjg
 * Fixed bug that pagerange was an INT in the database.

2006-12-02 cjg
 * In EPScript = and one_of now do something sensible with multiple fields.

2006-12-03 cjg
 * Fixed a couple of bugs if abstractsearch gets the wrong subscreen or
    a non available export format.
 * Added config to disable plugins and link screens into new lists.

2006-12-03 cjg
 * Removed some stray debug lines introduced in last commit.

2006-12-03 cjg
 * Actions now do POST but screen buttons still do GET
 * Fixed bug with thumbnails on new-version
 * Fixed bug with thumbnails on import
 * Fixed some method="form" oddness.

2006-12-03 cjg
 * Added MIME::Lite module 

2006-12-04 cjg
 * Renamed a css file to lose the "_" in the filename
 * css'd the action list and action bar

2006-12-04 cjg
 * Added missing phrase.

2006-12-04 cjg
 * Fixed issue with repeating background in toolboxes.
 * Upped user history page size to 50 from 5.

2006-12-04 cjg
 * Changed "Editorial Review" to "Review" (may still need some tweaks)
 * Added new history events: "note" and "other". 
 * "note" appears in the "messages" tab.

2006-12-04 cjg
 * Changed all aborts to EPrints::abort()

2006-12-04 moj
 * Tweaked emails to be a bit more HTML (slightly larger font for 
    headings, and bold around usernames/titles).

2006-12-04 moj
 * Added email link to activation email.
 * Reworded activation email a little.

2006-12-04 moj
 * Added EngD thesis as thesis_type
 * Added Keynote as pres_type
 * Added relevant phrases

2006-12-04 cjg
 * Fixed bug in ordering of search results.
 * Added form to change order of results from results page.
