@@ -5835,3 +5835,8 @@ PACKAGE: 2.2.99.2
  * Fixed bug in ordering of search results.
  * Added form to change order of results from results page.
 
+2006-12-04 cjg
+ * Fixed issue with import script treating no --user as user "0"
+ * import script now only frets about no --user if it's an eprint import
+ * Import plugins now set eprint_status to buffer if no other value is 
+    available.
